--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -4,10 +4,10 @@
   </div>
   <% if quote.daily_pick? %>
     <div class="tooltip my-auto" data-tip="Daily Quote">
-      <div class="text-4xl font-ubuntu font-black underline opacity-30 tabular-nums counter"></div>
+      <div class="counter font-ubuntu text-4xl font-black tabular-nums underline opacity-30"></div>
     </div>
   <% else %>
-    <div class="text-4xl font-ubuntu font-light opacity-30 tabular-nums my-auto counter"></div>
+    <div class="counter my-auto font-ubuntu text-4xl font-light tabular-nums opacity-30"></div>
   <% end %>
   <div class="list-col-grow my-auto">
     <%= turbo_stream_from quote %>
@@ -16,7 +16,7 @@
       <span class="font-medium"><%= quote.author %></span>
     </p>
   </div>
-  <div class="hidden sm:flex flex-col sm:flex-row gap-4 my-auto">
+  <div class="my-auto hidden flex-col gap-4 sm:flex sm:flex-row">
     <div class="tooltip" data-tip="Edit">
       <%= link_to edit_quote_path(quote), class: "btn btn-soft hover:btn-primary" do %>
         <%= solid_icon_tag("pen") %>
@@ -24,12 +24,12 @@
     </div>
 
     <div class="tooltip" data-tip="Delete">
-      <%= button_to quote, method: :delete, class: "btn btn-error btn-soft hover:btn-error", data: { turbo_confirm: "Confirm deletion of a #{quote.author} quote.", confirm_button: "Delete" } do %>
+      <%= button_to quote, method: :delete, class: "btn btn-soft btn-error hover:btn-error", data: { turbo_confirm: "Confirm deletion of a #{quote.author} quote.", confirm_button: "Delete" } do %>
         <%= solid_icon_tag("trash") %>
       <% end %>
     </div>
   </div>
-  <div class="sm:hidden flex items-center">
+  <div class="flex items-center sm:hidden">
     <%= render "fab", quote: %>
   </div>
 </li>
