--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, "Quotes" %>
 
 <div class="w-full">
-  <div class="flex flex-col sm:flex-row justify-between items-center mb-4 gap-4">
-    <h1 class="font-bold text-4xl">Quotes</h1>
+  <div class="mb-4 flex flex-col items-center justify-between gap-4 sm:flex-row">
+    <h1 class="text-4xl font-bold">Quotes</h1>
     <div class="flex flex-row justify-between gap-4">
       <div class="tooltip tooltip-bottom" data-tip="New Quote">
-        <%= link_to new_quote_path, class: "btn btn-primary btn-soft" do %>
+        <%= link_to new_quote_path, class: "btn btn-soft btn-primary" do %>
           <%= solid_icon_tag("plus") %>
         <% end %>
       </div>
@@ -25,7 +25,7 @@
   <%= turbo_stream_from :quotes %>
   <% if @quotes.any? %>
     <ul
-      class="list bg-base-200 rounded-box shadow-md"
+      class="list rounded-box bg-base-200 shadow-md"
       data-controller="sortable"
       data-sortable-animation-value="100"
       data-sortable-resource-name-value="quote"
@@ -34,6 +34,6 @@
       <%= render @quotes %>
     </ul>
   <% else %>
-    <p class="text-center my-10">No quotes found.</p>
+    <p class="my-10 text-center">No quotes found.</p>
   <% end %>
 </div>
