--- a/app/views/searches/_application.html.erb
+++ b/app/views/searches/_application.html.erb
@@ -1,9 +1,9 @@
 <li>
-  <%= link_to application.url, id: application.token, class: "group list-row py-1 hocus:bg-white/10 hocus:font-semibold outline-none cursor-pointer", target: "_blank", data: { search_target: "result" } do %>
-    <%= icon_tag application.icon, class: "size-5 fill-primary my-auto" %>
+  <%= link_to application.url, id: application.token, class: "group list-row cursor-pointer py-1 outline-none hocus:bg-white/10 hocus:font-semibold", target: "_blank", data: { search_target: "result" } do %>
+    <%= icon_tag application.icon, class: "my-auto size-5 fill-primary" %>
     <div class="my-auto">
       <div class="line-clamp-1"><%= application.name %></div>
-      <div class="text-xs line-clamp-1 text-base-content/48">
+      <div class="line-clamp-1 text-xs text-base-content/48">
         <%= tag.span(application.description, class: "group-hocus:hidden") if application.description.present? %>
         <%= tag.span(application.url, class: class_names("hidden group-hocus:inline" => application.description.present?)) %>
       </div>
