Sorted Tailwind classes in setting views

--- a/app/views/settings/_format_table.html.erb
+++ b/app/views/settings/_format_table.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (formatters:) %>
-<div class="overflow-x-auto mt-2">
+<div class="mt-2 overflow-x-auto">
   <table class="table table-xs">
     <thead>
       <tr>
