--- a/app/views/settings/_search_settings.html.erb
+++ b/app/views/settings/_search_settings.html.erb
@@ -1,4 +1,4 @@
-<fieldset class="fieldset bg-base-200 border-base-300 rounded-box border p-4 shadow-lg gap-4">
+<fieldset class="fieldset gap-4 rounded-box border border-base-300 bg-base-200 p-4 shadow-lg">
   <legend class="fieldset-legend">Search Settings</legend>
 
   <%= render "settings/inputs/select",
