--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, "Themes" %>
 
 <div class="w-full">
-  <div class="flex flex-col sm:flex-row justify-between items-center mb-4 gap-4">
-    <h1 class="font-bold text-4xl">Themes</h1>
+  <div class="mb-4 flex flex-col items-center justify-between gap-4 sm:flex-row">
+    <h1 class="text-4xl font-bold">Themes</h1>
     <div class="flex flex-row justify-between gap-4">
       <div class="tooltip tooltip-bottom" data-tip="New Theme">
-        <%= link_to new_theme_path, class: "btn btn-primary btn-soft" do %>
+        <%= link_to new_theme_path, class: "btn btn-soft btn-primary" do %>
           <%= solid_icon_tag("plus") %>
         <% end %>
       </div>
@@ -22,8 +22,8 @@
     <div class="flex flex-col gap-8">
       <% if @themes.custom.any? %>
         <div>
-          <h2 class="font-bold text-2xl mb-2">Custom Themes</h2>
-          <ul class="list bg-base-200 rounded-box shadow-md">
+          <h2 class="mb-2 text-2xl font-bold">Custom Themes</h2>
+          <ul class="list rounded-box bg-base-200 shadow-md">
             <%= render @themes.custom %>
           </ul>
         </div>
@@ -31,14 +31,14 @@
 
       <% if @themes.standard.any? %>
         <div>
-          <h2 class="font-bold text-2xl mb-2">Standard Themes</h2>
-          <ul class="list bg-base-200 rounded-box shadow-md">
+          <h2 class="mb-2 text-2xl font-bold">Standard Themes</h2>
+          <ul class="list rounded-box bg-base-200 shadow-md">
             <%= render @themes.standard %>
           </ul>
         </div>
       <% end %>
     </div>
   <% else %>
-    <p class="text-center my-10">No themes found.</p>
+    <p class="my-10 text-center">No themes found.</p>
   <% end %>
 </div>
