--- a/app/views/themes/_fab.html.erb
+++ b/app/views/themes/_fab.html.erb
@@ -1,12 +1,12 @@
 <%# locals: (theme:) %>
-<div class="action-button action-button-flower relative z-0 bottom-auto inset-0">
+<div class="action-button action-button-flower relative inset-0 bottom-auto z-0">
   <div tabindex="0" role="button" class="btn btn-circle border border-base-content/50">
     <%= solid_icon_tag("bars-progress") %>
   </div>
 
   <span class="btn btn-circle border border-base-content/50">✕</span>
 
-  <%= button_to theme, method: :patch, params: { theme: { enabled: !theme.enabled } }, class: "btn shadow-lg btn-circle btn-soft btn-primary border border-base-content/25" do %>
+  <%= button_to theme, method: :patch, params: { theme: { enabled: !theme.enabled } }, class: "btn btn-circle border border-base-content/25 shadow-lg btn-soft btn-primary" do %>
     <% if theme.enabled %>
       <%= solid_icon_tag("circle-check") %>
     <% else %>
@@ -15,15 +15,15 @@
   <% end %>
 
   <% if theme.custom? %>
-    <%= button_to edit_theme_path(theme), method: :get, class: "btn shadow-lg btn-circle btn-soft btn-primary border border-base-content/25" do %>
+    <%= button_to edit_theme_path(theme), method: :get, class: "btn btn-circle border border-base-content/25 shadow-lg btn-soft btn-primary" do %>
       <%= solid_icon_tag("pen") %>
     <% end %>
 
-    <%= button_to theme, method: :delete, class: "btn shadow-lg btn-circle btn-soft btn-error border border-base-content/25", data: { turbo_confirm: "Confirm deletion of #{theme.name}.", confirm_button: "Delete" } do %>
+    <%= button_to theme, method: :delete, class: "btn btn-circle border border-base-content/25 shadow-lg btn-soft btn-error", data: { turbo_confirm: "Confirm deletion of #{theme.name}.", confirm_button: "Delete" } do %>
       <%= solid_icon_tag("trash") %>
     <% end %>
   <% else %>
-    <%= button_to new_theme_path, method: :get, params: { clone: theme }, class: "btn shadow-lg btn-circle btn-soft btn-primary border border-base-content/25" do %>
+    <%= button_to new_theme_path, method: :get, params: { clone: theme }, class: "btn btn-circle border border-base-content/25 shadow-lg btn-soft btn-primary" do %>
       <%= solid_icon_tag("clone") %>
     <% end %>
   <% end %>
