--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -2,21 +2,21 @@
   <%= theme_stylesheet_tag theme %>
 <% end if theme.new_record? %>
 <fieldset
-  class="fieldset bg-base-200 border-base-300 rounded-box border p-4 shadow-lg w-lg md:w-lg lg:w-full mx-auto"
+  class="mx-auto fieldset w-lg rounded-box border border-base-300 bg-base-200 p-4 shadow-lg md:w-lg lg:w-full"
   data-controller="theme-editor"
   data-theme-editor-style-id-value="<%= dom_id(theme, :styles) %>"
   data-theme-editor-settings-value="<%= theme.to_json %>">
   <legend class="fieldset-legend"><%= content_for(:title) %></legend>
 
   <div class="flex gap-4">
-    <div class="w-full lg:w-auto lg:min-w-xs fieldset">
+    <div class="fieldset w-full lg:w-auto lg:min-w-xs">
       <%# Turbo is disabled to allow for redirects with anchors: https://github.com/hotwired/turbo/issues/211 %>
       <%= form_with(model: theme, class: "contents", data: { turbo: false }) do |form| %>
         <% if theme.errors.any? %>
-          <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-md mt-3">
+          <div id="error_explanation" class="mt-3 rounded-md bg-red-50 px-3 py-2 font-medium text-red-500">
             <h2><%= pluralize(theme.errors.count, "error") %> prohibited this theme from being saved:</h2>
 
-            <ul class="list-disc ml-6">
+            <ul class="ml-6 list-disc">
               <% theme.errors.each do |error| %>
                 <li><%= error.full_message %></li>
               <% end %>
@@ -25,14 +25,14 @@
         <% end %>
 
         <%= form.label :name %>
-        <%= form.text_field :name, required: true, class: "w-full validator" %>
+        <%= form.text_field :name, required: true, class: "validator w-full" %>
 
         <%= form.label :color_scheme %>
-        <%= form.select :color_scheme, Theme.color_schemes.map { |k, _v| [k.titleize, k] }, { prompt: "Select a color scheme", required: true }, class: "w-full validator" %>
+        <%= form.select :color_scheme, Theme.color_schemes.map { |k, _v| [k.titleize, k] }, { prompt: "Select a color scheme", required: true }, class: "validator w-full" %>
 
         <div class="divider">Colors</div>
 
-        <div class="flex flex-col font-ubuntu gap-2">
+        <div class="flex flex-col gap-2 font-ubuntu">
           <%= form.label :color_base, "Base" %>
           <div class="grid grid-cols-4 gap-2">
             <div class="tooltip" data-tip="Background">
@@ -50,7 +50,7 @@
           </div>
 
           <div class="flex flex-row">
-            <div class="grid grid-cols-2 gap-2 mx-auto">
+            <div class="mx-auto grid grid-cols-2 gap-2">
               <%= form.label :color_primary, "Primary", class: "col-span-2" %>
               <div class="tooltip" data-tip="Background">
                 <%= form.oklch_field :color_primary, label: "", class: "bg-primary text-base-content", data: { action: "theme-editor#update", setting: :color_primary } %>
@@ -86,7 +86,7 @@
 
             <div class="divider divider-horizontal"></div>
 
-            <div class="grid grid-cols-2 gap-2 mx-auto">
+            <div class="mx-auto grid grid-cols-2 gap-2">
               <%= form.label :color_info, "Info", class: "col-span-2" %>
               <div class="tooltip" data-tip="Background">
                 <%= form.oklch_field :color_info, label: "", class: "bg-info text-base-content", data: { action: "theme-editor#update", setting: :color_info } %>
@@ -126,11 +126,11 @@
 
         <div>
           <%= form.label :radius_selector, "Selectors - checkbox, toggle, badge" %>
-          <div class="grid grid-cols-5 px-1 my-2 gap-2">
+          <div class="my-2 grid grid-cols-5 gap-2 px-1">
             <% ThemesHelper::SELECTORS_RADIUSES.each do |value, appearance| %>
               <div class="tooltip" data-tip="<%= value %>">
-                <div class="size-14 overflow-hidden bg-base-300 rounded-field m-auto">
-                  <%= form.radio_button :radius_selector, value, class: "radio border-4 -mx-8 my-5 size-18 before:invisible #{appearance}", data: { action: "change->theme-editor#update", setting: :radius_selector } %>
+                <div class="m-auto size-14 overflow-hidden rounded-field bg-base-300">
+                  <%= form.radio_button :radius_selector, value, class: "radio -mx-8 my-5 size-18 border-4 before:invisible #{appearance}", data: { action: "change->theme-editor#update", setting: :radius_selector } %>
                 </div>
               </div>
             <% end %>
@@ -139,11 +139,11 @@
 
         <div>
           <%= form.label :radius_field, "Fields - button, input, select, tab" %>
-          <div class="grid grid-cols-5 px-1 my-2 gap-2">
+          <div class="my-2 grid grid-cols-5 gap-2 px-1">
             <% ThemesHelper::FIELDS_RADIUSES.each do |value, appearance| %>
               <div class="tooltip" data-tip="<%= value %>">
-                <div class="size-14 overflow-hidden bg-base-300 rounded-field m-auto">
-                  <%= form.radio_button :radius_field, value, class: "radio border-4 -mx-8 my-5 size-18 before:invisible #{appearance}", data: { action: "change->theme-editor#update", setting: :radius_field } %>
+                <div class="m-auto size-14 overflow-hidden rounded-field bg-base-300">
+                  <%= form.radio_button :radius_field, value, class: "radio -mx-8 my-5 size-18 border-4 before:invisible #{appearance}", data: { action: "change->theme-editor#update", setting: :radius_field } %>
                 </div>
               </div>
             <% end %>
@@ -152,11 +152,11 @@
 
         <div>
           <%= form.label :radius_box, "Boxes - card, modal, alert" %>
-          <div class="grid grid-cols-5 px-1 my-2 gap-2">
+          <div class="my-2 grid grid-cols-5 gap-2 px-1">
             <% ThemesHelper::BOX_RADIUSES.each do |value, appearance| %>
               <div class="tooltip" data-tip="<%= value %>">
-                <div class="size-14 overflow-hidden bg-base-300 rounded-field m-auto">
-                  <%= form.radio_button :radius_box, value, class: "radio border-4 -mx-8 my-5 size-18 before:invisible #{appearance}", data: { action: "change->theme-editor#update", setting: :radius_box } %>
+                <div class="m-auto size-14 overflow-hidden rounded-field bg-base-300">
+                  <%= form.radio_button :radius_box, value, class: "radio -mx-8 my-5 size-18 border-4 before:invisible #{appearance}", data: { action: "change->theme-editor#update", setting: :radius_box } %>
                 </div>
               </div>
             <% end %>
@@ -169,7 +169,7 @@
           <%= form.label :size_selector, "Selectors - checkbox, toggle, badge" %>
           <div class="w-full">
             <%= form.range_field :size_selector, min: 0.1875, max: 0.3125, step: 0.03125, class: "range w-full", data: { action: "input->theme-editor#update", setting: :size_selector } %>
-            <div class="flex px-1 my-2 text-xs">
+            <div class="my-2 flex px-1 text-xs">
               <span class="flex-1">Compact</span>
               <span class="flex-1 text-center">|</span>
               <span class="flex-1 text-right">Cozy</span>
@@ -181,7 +181,7 @@
           <%= form.label :size_field, "Fields - button, input, select, tab" %>
           <div class="w-full">
             <%= form.range_field :size_field, min: 0.1875, max: 0.3125, step: 0.03125, class: "range w-full", data: { action: "input->theme-editor#update", setting: :size_field } %>
-            <div class="flex px-1 my-2 text-xs">
+            <div class="my-2 flex px-1 text-xs">
               <span class="flex-1">Compact</span>
               <span class="flex-1 text-center">|</span>
               <span class="flex-1 text-right">Cozy</span>
@@ -195,7 +195,7 @@
           <%= form.label :border, "Width" %>
           <div class="w-full">
             <%= form.range_field :border, min: 0.5, max: 2.5, step: 0.5, class: "range w-full", data: { action: "input->theme-editor#update", setting: :border } %>
-            <div class="flex px-1 my-2 text-xs">
+            <div class="my-2 flex px-1 text-xs">
               <span class="flex-1">Thin</span>
               <span class="flex-1 text-center">|</span>
               <span class="flex-1 text-right">Thick</span>
@@ -206,7 +206,7 @@
         <div class="divider">Effects</div>
 
         <div>
-          <%= form.label :depth, class: "text-lg font-bold w-full" do %>
+          <%= form.label :depth, class: "w-full text-lg font-bold" do %>
             <%= form.check_box :depth, data: { action: "change->theme-editor#updateBoolean", setting: :depth } %>
             Depth Effect
           <% end %>
@@ -214,24 +214,24 @@
         </div>
 
         <div>
-          <%= form.label :noise, class: "text-lg font-bold w-full" do %>
+          <%= form.label :noise, class: "w-full text-lg font-bold" do %>
             <%= form.check_box :noise, data: { action: "change->theme-editor#updateBoolean", setting: :noise } %>
             Noise Effect
           <% end %>
           <span class="block text-base-content/48">Noise pattern on fields & selectors</span>
         </div>
 
-        <%= form.submit class: "btn btn-primary mt-4 w-full" %>
+        <%= form.submit class: "btn mt-4 w-full btn-primary" %>
         <% if theme.new_record? %>
-          <%= link_to "Back", themes_path, class: "btn btn-outline w-full" %>
+          <%= link_to "Back", themes_path, class: "btn w-full btn-outline" %>
         <% else %>
-          <%= link_to "Back", themes_path(anchor: theme.token), class: "btn btn-outline w-full" %>
+          <%= link_to "Back", themes_path(anchor: theme.token), class: "btn w-full btn-outline" %>
         <% end %>
       <% end %>
     </div>
-    <div class="bg-base-100 -mt-3 p-8 rounded-box w-full hidden lg:block">
+    <div class="-mt-3 hidden w-full rounded-box bg-base-100 p-8 lg:block">
       <%= turbo_frame_tag :home, src: home_preview_path(color: theme.color_primary), loading: :lazy, data: { theme_editor_target: "preview" } do %>
-        <div class="w-full text-xl text-center skeleton-text animate-pulse">
+        <div class="w-full animate-pulse skeleton-text text-center text-xl">
           Loading Preview
         </div>
       <% end %>
