Improved notice animations

--- a/app/views/layouts/shared/_notices.html.erb
+++ b/app/views/layouts/shared/_notices.html.erb
@@ -1,5 +1,5 @@
 <div class="toast">
-  <div class="flex flex-col">
+  <div class="flex flex-col-reverse">
     <% flash.each_with_index do |(type, message), i| -%>
       <%= notice_tag(type, message, duration: (flash.count - i) * 4000) %>
     <%- end -%>
