--- a/app/views/settings/inputs/_toggle.html.erb
+++ b/app/views/settings/inputs/_toggle.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (setting:) %>
-<%= form_with(model: setting, class: "w-full") do |form| %>
+<%= form_with(model: setting, class: "w-full", data: { turbo_permanent: true }) do |form| %>
   <%= form.label :name, class: "w-full text-lg font-bold" do %>
     <%= form.check_box :value, checked: setting.parsed_value, onchange: "this.form.requestSubmit()" %>
     <%= setting.name %>
