--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -4,19 +4,19 @@
   <div class="mb-4 flex flex-col items-center justify-between gap-4 sm:flex-row">
     <h1 class="text-4xl font-bold">Applications</h1>
     <div class="flex flex-row justify-between gap-4">
-      <div class="tooltip tooltip-bottom" data-tip="New Application">
+      <%= tooltip_tag "New Application", position: :bottom do %>
         <%= link_to new_application_path, class: "btn btn-soft btn-primary" do %>
           <%= solid_icon_tag("plus") %>
         <% end %>
-      </div>
+      <% end %>
 
       <%= render "sort_toggle" %>
 
-      <div class="tooltip tooltip-bottom" data-tip="Home">
+      <%= tooltip_tag "Home", position: :bottom do %>
         <%= link_to root_path, class: "btn hover:btn-primary" do %>
           <%= regular_icon_tag("house") %>
         <% end %>
-      </div>
+      <% end %>
     </div>
   </div>
 
