--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -3,9 +3,9 @@
     <%= solid_icon_tag("grip-vertical", class: "my-auto") %>
   </div>
   <% if quote.daily_pick? %>
-    <div class="tooltip my-auto" data-tip="Daily Quote">
+    <%= tooltip_tag "Daily Quote", class: "my-auto" do %>
       <div class="counter font-ubuntu text-4xl font-black tabular-nums underline opacity-30"></div>
-    </div>
+    <% end %>
   <% else %>
     <div class="counter my-auto font-ubuntu text-4xl font-light tabular-nums opacity-30"></div>
   <% end %>
@@ -17,17 +17,17 @@
     </p>
   </div>
   <div class="my-auto hidden flex-col gap-4 sm:flex sm:flex-row">
-    <div class="tooltip" data-tip="Edit">
+    <%= tooltip_tag "Edit" do %>
       <%= link_to edit_quote_path(quote), class: "btn btn-soft hover:btn-primary" do %>
         <%= solid_icon_tag("pen") %>
       <% end %>
-    </div>
+    <% end %>
 
-    <div class="tooltip" data-tip="Delete">
+    <%= tooltip_tag "Delete" do %>
       <%= button_to quote, method: :delete, class: "btn btn-soft btn-error hover:btn-error", data: { turbo_confirm: "Confirm deletion of a #{quote.author} quote.", confirm_button: "Delete" } do %>
         <%= solid_icon_tag("trash") %>
       <% end %>
-    </div>
+    <% end %>
   </div>
   <div class="flex items-center sm:hidden">
     <%= render "fab", quote: %>
