--- a/app/views/themes/_theme.html.erb
+++ b/app/views/themes/_theme.html.erb
@@ -8,29 +8,29 @@
   </div>
   <div class="my-auto hidden flex-col gap-4 sm:flex sm:flex-row">
     <%= form_with(model: theme, class: "my-auto") do |form| %>
-      <div class="tooltip" data-tip="Enabled">
+      <%= tooltip_tag "Enabled" do %>
         <%= form.check_box :enabled, class: "toggle-lg", onchange: "this.form.requestSubmit()" %>
-      </div>
+      <% end %>
     <% end %>
 
     <% if theme.custom? %>
-      <div class="tooltip" data-tip="Edit">
+      <%= tooltip_tag "Edit" do %>
         <%= link_to edit_theme_path(theme), class: "btn btn-soft hover:btn-primary" do %>
           <%= solid_icon_tag("pen") %>
         <% end %>
-      </div>
+      <% end %>
 
-      <div class="tooltip" data-tip="Delete">
+      <%= tooltip_tag "Delete" do %>
         <%= button_to theme, method: :delete, class: "btn btn-soft btn-error hover:btn-error", data: { turbo_confirm: "Confirm deletion of #{theme.name}.", confirm_button: "Delete" } do %>
           <%= solid_icon_tag("trash") %>
         <% end %>
-      </div>
+      <% end %>
     <% else %>
-      <div class="tooltip" data-tip="Clone">
+      <%= tooltip_tag "Clone" do %>
         <%= link_to new_theme_path(clone: theme), class: "btn btn-soft hover:btn-primary" do %>
           <%= solid_icon_tag("clone") %>
         <% end %>
-      </div>
+      <% end %>
     <% end %>
   </div>
   <div class="flex items-center sm:hidden">
