--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -4,16 +4,16 @@
   <div class="mb-4 flex flex-col items-center justify-between gap-4 sm:flex-row">
     <h1 class="text-4xl font-bold">Themes</h1>
     <div class="flex flex-row justify-between gap-4">
-      <div class="tooltip tooltip-bottom" data-tip="New Theme">
+      <%= tooltip_tag "New Theme", position: :bottom do %>
         <%= link_to new_theme_path, class: "btn btn-soft btn-primary" do %>
           <%= solid_icon_tag("plus") %>
         <% end %>
-      </div>
-      <div class="tooltip tooltip-bottom" data-tip="Home">
+      <% end %>
+      <%= tooltip_tag "Home", position: :bottom do %>
         <%= link_to root_path, class: "btn hover:btn-primary" do %>
           <%= regular_icon_tag("house") %>
         <% end %>
-      </div>
+      <% end %>
     </div>
   </div>
 
